style: apply Google Java Format to entire codebase
Apply Spotless Google Java Format formatting to all 260 source files.
This standardizes the codebase to Google Java Style (2 spaces, consistent
formatting) as configured in checkstyle.xml and enforced by Spotless plugin.

Changes:
- 260 files reformatted
- 50,474 lines modified (formatting only, no logic changes)
- Consistent indentation (2 spaces)
- Consistent import ordering
- Standardized whitespace and line breaks

This baseline formatting ensures:
1. Consistent code style across all modules
2. CI/CD format checks will pass
3. Future diffs show only logical changes
4. Developer onboarding easier with uniform style

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>